--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
     </head>
     <body>
-        <center>
-            <h1 style="font-weight: 100;">Animal Identifier</h1>
-            <h3 style="font-weight: 100;">I listen to sounds and identify them!</h3>
-            <br>
-            <button class="btn btn-primary" style="font-size:20px;" onclick="start()">Start</button>
-            <h3 id="dog" style="font-weight: 100;">I have heard 0 dogs!</h3>
-            <h3 id="cat" style="font-weight: 100;">I have heard 0 cats!</h3>
-            <h3 id="sheep" style="font-weight: 100;">I have heard 0 sheep!</h3>
-            <h3 id="now" style="font-weight: 100;">I am hearing...</h3>
-            <br>
-            <img id="nowImg" src="">
-        </center>
+        <div class="container" id="div2">
+            <center>
+                <h1 style="font-weight: 100; color: white;">Animal Identifier</h1>
+                <h3 style="font-weight: 100; color: white;">I listen to sounds and identify them!</h3>
+                <br>
+                <button class="btn btn-primary" style="font-size:20px; color: white;" onclick="start()">Start</button>
+                <h3 id="dog" style="font-weight: 100; color: white;">I have heard 0 dogs!</h3>
+                <h3 id="cat" style="font-weight: 100; color: white;">I have heard 0 cats!</h3>
+                <h3 id="sheep" style="font-weight: 100; color: white;">I have heard 0 sheep!</h3>
+                <h3 id="now" style="font-weight: 100; color: white;">I am hearing...</h3>
+                <br>
+                <img id="nowImg" src="">
+            </center>
+        </div>
     </body>
 </html>
